fixed overflow on channel browser and channel members

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -29,6 +29,6 @@
     flex-direction: column;
     background-color: #1a1d21;
     width: 100%;
-    overflow-y: hidden
-
+    overflow-y: hidden;
+    overflow: auto;
 }
